--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.22)
+cmake_minimum_required(VERSION 3.22...3.27)
 
 project(Advanced_qf_book VERSION 1.0.0 LANGUAGES C CXX)
 
@@ -6,6 +6,10 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
+set(LIBRARY_RANDOM my_lib_random)
+set(LIBRARY_EQ my_lib_equity)
+set(EXECUTABLE_NAME executable_equity)
+
 add_subdirectory(src)
 add_subdirectory(app)
-add_subdirectory(tests)
+# add_subdirectory(tests)
