adding fx section

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,10 @@ set(CMAKE_CXX_EXTENSIONS OFF)
 set(LIBRARY_RANDOM my_lib_random)
 set(LIBRARY_LINEAR_ALGEBRA my_linear_algebra)
 set(LIBRARY_EQ my_lib_equity)
+set(LIBRARY_FX my_lib_fx)
+
 set(EXECUTABLE_NAME executable_equity)
+
 
 add_subdirectory(src)
 add_subdirectory(app)
