--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -1,5 +1,4 @@
-set(EXE_SOURCES
-    main.cpp)
-
-add_executable(${EXECUTABLE_NAME} ${EXE_SOURCES})
-target_link_libraries(${EXECUTABLE_NAME} PUBLIC ${LIBRARY_EQ})
+add_subdirectory(equity)
+add_subdirectory(fx)
+add_subdirectory(ir)
+add_subdirectory(credit)
